--- a/1、WechatApplet-PaiMai/pages/news/news.wxss
+++ b/1、WechatApplet-PaiMai/pages/news/news.wxss
@@ -1,1 +1,67 @@
 /* pages/news/news.wxss */
+.options {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    margin-top: 20rpx;
+
+}
+
+.options image {
+    width: 90rpx;
+    height: 90rpx;
+}
+
+.options .item {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.content {
+    margin-top: 20rpx;
+}
+
+.content .item {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    margin-top: 40rpx;
+}
+
+.content .item .left_img {
+    width: 80rpx;
+    height: 80rpx;
+    margin-left: 20rpx;
+}
+
+.content .item .left_img image {
+    width: 80rpx;
+    height: 80rpx;
+}
+
+.content .item .info {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    margin-left: 15rpx;
+    width: 100%;
+}
+
+.content .item .info .new_info {
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+
+}
+
+.new_content {
+    display: -webkit-box;
+    word-break: break-all;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    -webkit-box-orient: vertical;
+    -webkit-line-clamp: 1;
+
+}
