--- a/1、WechatApplet-PaiMai/pages/My/My.wxml
+++ b/1、WechatApplet-PaiMai/pages/My/My.wxml
@@ -4,6 +4,7 @@
         -->
 <view>
     <view class="top">
+
         <view class="info">
             <!--左部：头像、登录、注册按钮-->
             <view class="left">
@@ -59,21 +60,32 @@
         </view>
 
     </view>
+    <view class="line"></view>
     <view class="bottom">
         <view class="item">
-            <text>我的钱包</text>
-            <text>￥20 ></text>
+            <view class="info">
+                <text>我的钱包</text>
+                <text>￥20 ></text>
+            </view>
+            <view class="line"></view>
         </view>
         <view class="item">
-            <text>我的优惠券</text>
-            <text>暂无可用 ></text>
+            <view class="info">
+                <text>我的优惠券</text>
+                <text>暂无可用 ></text>
+            </view>
+            <view class="line"></view>
         </view>
         <view class="item">
-            <text>领券中心</text>
-            <text>你的福利都在这里 ></text>
+            <view class="info">
+                <text>领券中心</text>
+                <text>你的福利都在这里 ></text>
+            </view>
+            <view class="line"></view>
         </view>
     </view>
     <view class="bottom_other">
-        <button>官方客服微信</button> <button>个人微信</button>
+        <button>官方客服微信</button>
+        <button>个人微信</button>
     </view>
 </view>
