--- a/1、WechatApplet-PaiMai/pages/index/index.wxss
+++ b/1、WechatApplet-PaiMai/pages/index/index.wxss
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 20rpx;
+    margin: 60rpx auto 60rpx auto;
 
 }
 
