--- a/1、WechatApplet-PaiMai/pages/news/news.wxss
+++ b/1、WechatApplet-PaiMai/pages/news/news.wxss
@@ -1,9 +1,10 @@
 /* pages/news/news.wxss */
+
 .options {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin-top: 20rpx;
+    margin: 60rpx auto 60rpx auto;
 
 }
 
@@ -25,8 +26,8 @@
 .content .item {
     display: flex;
     flex-direction: row;
-    flex-wrap: nowrap;
-    margin-top: 40rpx;
+    /*flex-wrap: nowrap;*/
+    margin-top: 80rpx;
 }
 
 .content .item .left_img {
@@ -56,6 +57,7 @@
 
 }
 
+
 .new_content {
     display: -webkit-box;
     word-break: break-all;
@@ -63,5 +65,17 @@
     overflow: hidden;
     -webkit-box-orient: vertical;
     -webkit-line-clamp: 1;
+
+}
+
+.line {
+    width: 100%;
+    height: 10 prx;
+    border-top: solid #c0ebd7 10px;
+}
+
+.content .item .info .line {
+    width: 100%;
+    border-top: solid #c0ebd7 2px;
 
 }
